<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="329dp"
        android:layout_height="604dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <EditText
            android:id="@+id/edtx_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=".AUTOFILL_HINT_PERSON_NAME"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtx_lastname"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=".AUTOFILL_HINT_PERSON_NAME"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtx_documentid"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="@string/document_id"
            android:ems="10"
            android:hint="@string/document_id"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtx_birthdate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=".AUTOFILL_HINT_BIRTH_DATE_FULL"
            android:ems="10"
            android:hint="@string/birthdate"
            android:inputType="date" />

        <EditText
            android:id="@+id/edtx_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=".AUTOFILL_HINT_EMAIL_ADDRESS"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtx_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=".AUTOFILL_HINT_PASSWORD"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtx_address"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/register"
            android:textAlignment="inherit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>